--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 freya = { git = "https://github.com/marc2332/freya.git", version = "0.2.2" }
 freya-node-state = { git = "https://github.com/marc2332/freya.git", version = "0.2.1" }
+indexmap = "2.6.0"
 skia-safe = "0.75"
