--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "freya-transition"
+name = "freya-motion"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-freya = { git = "https://github.com/marc2332/freya.git", branch = "feat/scale-effect" }
-freya-node-state = { git = "https://github.com/marc2332/freya.git", branch = "feat/scale-effect" }
-indexmap = "2.6.0"
-skia-safe = "0.80"
+freya = { git = "https://github.com/Aiving/freya.git", branch = "feat/transforms" }
+freya-core = { git = "https://github.com/Aiving/freya.git", branch = "feat/transforms" }
+indexmap = "2.7.1"
+skia-safe = "0.81.0"
